update add tekst foto

--- a/index.html
+++ b/index.html
@@ -13,18 +13,73 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- header -->
+    <div class="header" id="page-one">
         <div class="logo">
             <img src="/media/logo.svg" alt="">
         </div>
         <div class="titel">
-            <h1 style="font-family: 'rockwell';">De bronsschat van de Westfrisiaweg</h1>
+            <h1>De bronsschat van de Westfrisiaweg</h1>
         </div>
     </div>
 
-    <div class="hoofd-foto">
-        <img id="hoofd-foto" src="/media/hoofd-foto.png" alt="">
-    </div>
+    <!-- homepage -->
+    <section id="homepage">
+        <div class="homepage">
+            <!-- <div class="hoofd-img">
+                <img class="hoofd-foto" src="/media/bronsschat.jpg" alt="">
+            </div> -->
+
+            <div class="icon-scroll"></div>
+        </div>
+    </section>
+
+    <!-- eerste pagina / intro -->
+    <section id="intro">
+        <div class="intro">
+            <div class="intro-titel">
+                <h2>De bronsschat</h2>
+            </div>
+            <div class="intro-flex">
+                <div class="intro-text">
+                    <p>Begin 2015 vonden archeologen een verzameling bronzen voorwerpen tijdens archeologisch onderzoek
+                        op het tracé van de Westfrisaweg (N23). Het was al snel duidelijk dat het om een unieke
+                        topvondst
+                        ging. Dat werd nog eens bevestigd door deskundigen die de vondst bestudeerden en restaureerden.
+                        De
+                        mantelspelden, armbanden en ringen werden bestudeerd bij de Universiteit van Leiden en
+                        gerestaureerd bij de firma Restaura in Limburg. De vondsten krijgen straks een plaats in de
+                        tentoonstellingsruimte in <a class="link" href="www.huisvanhilde.nl"> Huis van Hilde</a>, het
+                        archeologiecentrum van de provincie Noord-Holland in
+                        Castricum
+                    </p>
+                    <br>
+                    <p>
+                        Het woord ‘schat’ refereert niet zozeer aan een waarde die in geld is uit te drukken. De
+                        voorwerpen zijn ontzettend zeldzaam en geven een ‘schat’ aan informatie over het leven in de
+                        bronstijd (900-800 voor Chr.). De oorspronkelijke eigenaar moet een vooraanstaande persoon zijn
+                        geweest en heeft de objecten niet in de grond gestopt met het idee een schat te begraven. Deze
+                        persoon heeft met de handeling een offer gebracht; mogelijk een schenking gedaan aan een
+                        godheid.
+                    </p>
+                    <br>
+                    <p>
+                        De Westfrisiaweg is bijzonder rijk aan sporen uit de Bronstijd; het is echt een topgebied. De
+                        bewoners van toen hebben hun sporen achtergelaten in het landschap en wij leggen daar nu nieuwe
+                        overheen. Het kan niet anders dan dat daardoor ook sporen uit het verleden voorgoed gewist
+                        worden. Daarom is het bijzonder belangrijk dat we de aanknopingspunten met onze geschiedenis
+                        veilig stellen. De bronsschat is zo’n belangrijk aanknopingspunt. Met deze vondst is weer een
+                        belangrijk stukje van de gigantische puzzel van onze geschiedenis ontdekt.
+                    </p>
+                </div>
+                <div class="intro-img">
+                    <img id="intro-img" src="/media/werk.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="footer">
         <div class="logo-pnh">
