--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <!-- css -->
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/typeface.css">
+
+    <!-- leaflet css -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin="" />
+
+    <!-- leaflet js -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
+    <script src="/js/markerwaardweg.js" type="text/javascript"></script>
+
+
 </head>
 
 <body>
@@ -79,6 +92,32 @@
         </div>
     </section>
 
+    <!-- vindplaats / kaart -->
+
+    <section id="vindplaats">
+        <div class="vindplaats-titel">
+            <h2>De vindplaats</h2>
+        </div>
+
+        <div class="vindplaats-flex">
+            <div class="vindplaats-text">
+                De vondst is gedaan tijdens opgravingen die afgelopen winter ten westen van Hoogkarspel, tussen de
+                Streekweg en de N302, zijn uitgevoerd. De locatie heeft de naam Markerwaardweg gekregen, aangezien het
+                veldwerk direct ten zuiden van de kruising tussen de Markerwaardweg en N302 plaats heeft gevonden. De
+                bronzen objecten zijn in een prehistorische greppel op nog geen 20 m ten zuiden van de N302
+                aangetroffen, vrijwel op de gemeentegrens van Drechterland en Medemblik. De vondst lag nog net binnen de
+                gemeente Medemblik. Het overgrote deel van de opgravingen vonden plaats binnen de gemeente Drechterland.
+
+            </div>
+
+            <div class="leaflet">
+                <div id="map">
+                    <script src="/js/bronsschat.js" type="text/javascript"></script>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- footer -->
 
     <footer class="footer">
@@ -89,5 +128,6 @@
 
     </footer>
 </body>
+
 
 </html>
