--- a/index.html
+++ b/index.html
@@ -118,6 +118,39 @@
         </div>
     </section>
 
+    <!-- bronsschat -->
+
+    <section id="bronsschat">
+        <div class="bronsschat">
+            <div class="bronsschat-titel">
+                <h2>De bronsschat</h2>
+            </div>
+            <div class="bronsschat-flex">
+                <div class="bronsschat-text">
+                    <p>
+                        Bij de Markerwaardweg is een heel merkwaardige verzameling bronzen voorwerpen en een vuurstenen
+                        werktuig gevonden. Het lijkt te gaan om voorwerpen die te maken hebben met opzichtig uiterlijk
+                        vertoon: drie grote versierde bronzen mantelspelden, ook wel fibulae genaamd, een grote
+                        kledingnaald, twee bronzen armbanden, een serie ringen en twee voor ons nog wat mysterieuze
+                        bronzen plaatjes met steeds aan één kant vijf openingen. Dit waren waarschijnlijk de bronzen
+                        onderdelen van een ‘kostuum’. Interessant is dat dit soort sieraden en kledingattributen vooral
+                        in Scandinavië voorkomen. Het eigenaardige is dat deze objecten zorgvuldig bij elkaar in de
+                        venige vulling van een bronstijdgreppel zijn neergelegd. Dit gebeurde ongeveer tussen 900 en 800
+                        voor Chr. Dit betekent dat deze bijzondere voorwerpen in de grond zijn achtergelaten toen de
+                        mensen van deze locatie wegtrokken. Waarom zouden mensen zulke bijzondere voorwerpen achterlaten
+                        in een drassige greppel? Hoe vreemd het voor ons ook moge klinken: het blijkt dat in deze
+                        periode heel veel bijzondere voorwerpen doelbewust in ‘natte’ plaatsen als venen, riviertjes en
+                        vennetjes werden achtergelaten. De theorie is dat dit een soort ‘offers’ waren.
+                    </p>
+                </div>
+                <div class="bronsschat-img">
+                    <img id="bronsschat-img" src="/media/hoofd-foto.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- footer -->
 
     <footer class="footer">
