add markerwaardweg leaflet

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-    <script src="/js/markerwaardweg.js" type="text/javascript"></script>
+    <!-- <script src="/js/markerwaardweg.js" type="text/javascript"></script>
+    <script src="/js/markerwaardweg2.js" type="text/javascript"></script> -->
+    <script src="/js/markerwaardweg3.js" type="text/javascript"></script>
 
 
 </head>
