--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                         ging. Dat werd nog eens bevestigd door deskundigen die de vondst bestudeerden en restaureerden.
                         De
                         mantelspelden, armbanden en ringen werden bestudeerd bij de Universiteit van Leiden en
-                        gerestaureerd bij de firma Restaura in Limburg. De vondsten krijgen straks een plaats in de
+                        gerestaureerd bij de firma Restaura in Limburg. De vondsten hebben een plaats in de
                         tentoonstellingsruimte in <a class="link" href="www.huisvanhilde.nl"> Huis van Hilde</a>, het
                         archeologiecentrum van de provincie Noord-Holland in
-                        Castricum
+                        Castricum.
                     </p>
                     <br>
                     <p>
@@ -105,7 +105,7 @@
 
         <div class="vindplaats-flex">
             <div class="vindplaats-text">
-                De vondst is gedaan tijdens opgravingen die afgelopen winter ten westen van Hoogkarspel, tussen de
+                De vondst is gedaan tijdens opgravingen die in de winter van 2015 ten westen van Hoogkarspel, tussen de
                 Streekweg en de N302, zijn uitgevoerd. De locatie heeft de naam Markerwaardweg gekregen, aangezien het
                 veldwerk direct ten zuiden van de kruising tussen de Markerwaardweg en N302 plaats heeft gevonden. De
                 bronzen objecten zijn in een prehistorische greppel op nog geen 20 m ten zuiden van de N302
