update optimaliseren + add scroll to top button

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
+
     <!-- <script src="/js/markerwaardweg.js" type="text/javascript"></script>
     <script src="/js/markerwaardweg2.js" type="text/javascript"></script> -->
     <script src="/js/markerwaardweg3.js" type="text/javascript"></script>
 
+    <script src="https://kit.fontawesome.com/ea176faa6e.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -90,7 +92,7 @@
                     </p>
                 </div>
                 <div class="intro-img">
-                    <img id="intro-img" src="/media/werk.jpg" alt="">
+                    <img id="intro-img" src="/media/werk.webp" alt="">
                 </div>
             </div>
         </div>
@@ -153,30 +155,18 @@
                 <div class="vondsten-img">
                     <div class="slideshow">
                         <img src="/media/bronsschat/vondst1.jpeg" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst2.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst3.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst4.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst5.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst6.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst7.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst8.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst9.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst10.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst11.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst12.jpeg"  alt=""
-                            class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst13.jpeg"  alt=""
-                            class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst2.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst3.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst4.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst5.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst6.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst7.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst8.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst9.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst10.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst11.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst12.webp" alt="" class="slides">
+                        <img loading="lazy" src="/media/bronsschat/vondst13.webp" alt="" class="slides">
                         <button class="button left" onclick="plusDivs(-1)">&#10094;</button>
                         <button class="button right" onclick="plusDivs(+1)">&#10095;</button>
                     </div>
@@ -190,13 +180,16 @@
 
     <footer class="footer">
         <div class="logo-pnh">
-            <img id="pnh" src="/media/PNH_logo.png" alt="">
+            <img id="pnh" src="/media/PNH_logo.webp" alt="">
         </div>
-
-
+        <div class="copy">
+            <p> &#169; 2022</p>
+        </div>
     </footer>
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
     <script defer src="js/slideshow.js"></script>
+    <script defer src="js/scroll.js"></script>
 
 </body>
 
