--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                         De
                         mantelspelden, armbanden en ringen werden bestudeerd bij de Universiteit van Leiden en
                         gerestaureerd bij de firma Restaura in Limburg. De vondsten hebben een plaats in de
-                        tentoonstellingsruimte in <a class="link" href="www.huisvanhilde.nl"> Huis van Hilde</a>, het
+                        tentoonstellingsruimte in <a class="link" target="_blank" href="https://www.huisvanhilde.nl/">
+                            Huis van Hilde</a>, het
                         archeologiecentrum van de provincie Noord-Holland in
                         Castricum.
                     </p>
@@ -107,13 +108,19 @@
 
         <div class="vindplaats-flex">
             <div class="vindplaats-text">
-                De vondst is gedaan tijdens opgravingen die in de winter van 2015 ten westen van Hoogkarspel, tussen de
-                Streekweg en de N302, zijn uitgevoerd. De locatie heeft de naam Markerwaardweg gekregen, aangezien het
-                veldwerk direct ten zuiden van de kruising tussen de Markerwaardweg en N302 plaats heeft gevonden. De
-                bronzen objecten zijn in een prehistorische greppel op nog geen 20 m ten zuiden van de N302
-                aangetroffen, vrijwel op de gemeentegrens van Drechterland en Medemblik. De vondst lag nog net binnen de
-                gemeente Medemblik. Het overgrote deel van de opgravingen vonden plaats binnen de gemeente Drechterland.
-
+                <p>
+                    De vondst is gedaan tijdens opgravingen die in de winter van 2015 ten westen van Hoogkarspel, tussen
+                    de
+                    Streekweg en de N302, zijn uitgevoerd. De locatie heeft de naam Markerwaardweg gekregen, aangezien
+                    het
+                    veldwerk direct ten zuiden van de kruising tussen de Markerwaardweg en N302 plaats heeft gevonden.
+                    De
+                    bronzen objecten zijn in een prehistorische greppel op nog geen 20 m ten zuiden van de N302
+                    aangetroffen, vrijwel op de gemeentegrens van Drechterland en Medemblik. De vondst lag nog net
+                    binnen de
+                    gemeente Medemblik. Het overgrote deel van de opgravingen vonden plaats binnen de gemeente
+                    Drechterland.
+                </p>
             </div>
 
             <div class="leaflet">
@@ -154,7 +161,7 @@
                 </div> -->
                 <div class="vondsten-img">
                     <div class="slideshow">
-                        <img src="/media/bronsschat/vondst1.jpeg" alt="" class="slides">
+                        <img src="/media/bronsschat/vondst1.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst2.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst3.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst4.webp" alt="" class="slides">
@@ -180,7 +187,7 @@
 
     <footer class="footer">
         <div class="logo-pnh">
-            <img id="pnh" src="/media/PNH_logo.webp" alt="">
+           <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt=""></a>
         </div>
         <div class="copy">
             <p> &#169; 2022</p>
