update mobile first design

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/typeface.css">
     <link rel="stylesheet" href="css/slideshow.css">
+    <link rel="stylesheet" href="css/media.css">
 
     <!-- leaflet css -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -23,12 +24,12 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 
-    <!-- <script src="/js/markerwaardweg.js" type="text/javascript"></script>
-    <script src="/js/markerwaardweg2.js" type="text/javascript"></script> -->
     <script src="/js/markerwaardweg3.js" type="text/javascript"></script>
 
     <script src="https://kit.fontawesome.com/ea176faa6e.js" crossorigin="anonymous"></script>
 
+
+    
 </head>
 
 <body>
@@ -45,10 +46,6 @@
     <!-- homepage -->
     <section id="homepage">
         <div class="homepage">
-            <!-- <div class="hoofd-img">
-                <img class="hoofd-foto" src="/media/bronsschat.jpg" alt="">
-            </div> -->
-
             <div class="icon-scroll"></div>
         </div>
     </section>
@@ -59,7 +56,7 @@
             <div class="intro-titel">
                 <h2>De bronsschat</h2>
             </div>
-            <div class="intro-flex">
+            <div class="flex">
                 <div class="intro-text">
                     <p>Begin 2015 vonden archeologen een verzameling bronzen voorwerpen tijdens archeologisch onderzoek
                         op het tracé van de Westfrisaweg (N23). Het was al snel duidelijk dat het om een unieke
@@ -106,7 +103,7 @@
             <h2>De vindplaats</h2>
         </div>
 
-        <div class="vindplaats-flex">
+        <div class="flex">
             <div class="vindplaats-text">
                 <p>
                     De vondst is gedaan tijdens opgravingen die in de winter van 2015 ten westen van Hoogkarspel, tussen
@@ -138,7 +135,7 @@
             <div class="vondsten-titel">
                 <h2>De vondsten</h2>
             </div>
-            <div class="vondsten-flex">
+            <div class="flex">
                 <div class="vondsten-text">
                     <p>
                         Bij de Markerwaardweg is een heel merkwaardige verzameling bronzen voorwerpen en een vuurstenen
@@ -156,9 +153,7 @@
                         vennetjes werden achtergelaten. De theorie is dat dit een soort ‘offers’ waren.
                     </p>
                 </div>
-                <!-- <div class="vondsten-img">
-                    <img id="vondsten-img" src="/media/hoofd-foto.png" alt="">
-                </div> -->
+
                 <div class="vondsten-img">
                     <div class="slideshow">
                         <img src="/media/bronsschat/vondst1.webp" alt="" class="slides">
@@ -190,7 +185,7 @@
            <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt=""></a>
         </div>
         <div class="copy">
-            <p> &#169; 2022</p>
+            <p class="copy-text"> &#169; 2022</p>
         </div>
     </footer>
 
