update slideshow + css + mobile first design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- css -->
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/typeface.css">
-    <link rel="stylesheet" href="css/slideshow.css">
+    <link rel="stylesheet" href="css/slideshow2.css">
     <link rel="stylesheet" href="css/media.css">
 
     <!-- leaflet css -->
@@ -29,7 +29,7 @@
     <script src="https://kit.fontawesome.com/ea176faa6e.js" crossorigin="anonymous"></script>
 
 
-    
+
 </head>
 
 <body>
@@ -156,7 +156,7 @@
 
                 <div class="vondsten-img">
                     <div class="slideshow">
-                        <img src="/media/bronsschat/vondst1.webp" alt="" class="slides">
+                        <!-- <img src="/media/bronsschat/vondst1.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst2.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst3.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst4.webp" alt="" class="slides">
@@ -168,9 +168,61 @@
                         <img loading="lazy" src="/media/bronsschat/vondst10.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst11.webp" alt="" class="slides">
                         <img loading="lazy" src="/media/bronsschat/vondst12.webp" alt="" class="slides">
-                        <img loading="lazy" src="/media/bronsschat/vondst13.webp" alt="" class="slides">
-                        <button class="button left" onclick="plusDivs(-1)">&#10094;</button>
-                        <button class="button right" onclick="plusDivs(+1)">&#10095;</button>
+                        <img loading="lazy" src="/media/bronsschat/vondst13.webp" alt="" class="slides"> -->
+                        <div class="slides ">
+                            <div class="numbertext">1 / 13</div>
+                            <img style="width: 105%" src="/media/bronsschat/vondst1.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">2 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst2.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">3 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst3.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">4 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst4.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">5 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst5.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">6 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst6.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">7 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst7.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">8 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst8.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">9 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst9.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">10 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst10.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">11 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst11.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">12 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst12.webp" alt="">
+                        </div>
+                        <div class="slides ">
+                            <div class="numbertext">13 / 13</div>
+                            <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst13.webp" alt="">
+                        </div>
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
                 </div>
             </div>
@@ -182,7 +234,7 @@
 
     <footer class="footer">
         <div class="logo-pnh">
-           <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt=""></a>
+            <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt=""></a>
         </div>
         <div class="copy">
             <p class="copy-text"> &#169; 2022</p>
