update foto + tekst align + slideshow

--- a/index.html
+++ b/index.html
@@ -172,54 +172,67 @@
                         <div class="slides ">
                             <div class="numbertext">1 / 13</div>
                             <img style="width: 105%" src="/media/bronsschat/vondst1.webp" alt="">
+                            <div class="text"> <span> Ring </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">2 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst2.webp" alt="">
+                            <div class="text"> <span> Armband </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">3 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst3.webp" alt="">
+                            <div class="text"> <span> Armband </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">4 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst4.webp" alt="">
+                            <div class="text"> <span> Waarschijnlijk bronzen onderdeel van een ‘kostuum’ </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">5 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst5.webp" alt="">
+                            <div class="text"> <span> Waarschijnlijk bronzen onderdeel van een ‘kostuum’ </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">6 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst6.webp" alt="">
+                            <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">7 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst7.webp" alt="">
+                            <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">8 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst8.webp" alt="">
+                            <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">9 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst9.webp" alt="">
+                            <div class="text"> <span> Ringen </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">10 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst10.webp" alt="">
+                            <div class="text"> <span> Kledingnaald </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">11 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst11.webp" alt="">
+                            <div class="text"> <span> Brilfibulae (mantelspeld) </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">12 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst12.webp" alt="">
+                            <div class="text"> <span> Brilfibulae (mantelspeld) </span> </div>
                         </div>
                         <div class="slides ">
                             <div class="numbertext">13 / 13</div>
                             <img style="width: 105%" style="width: 100%"src="/media/bronsschat/vondst13.webp" alt="">
+                            <div class="text"> <span> Brilfibulae (mantelspeld) </span> </div>
                         </div>
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -233,10 +246,10 @@
     <!-- footer -->
 
     <footer class="footer">
-        <div class="logo-pnh">
-            <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt=""></a>
-        </div>
         <div class="copy">
+            <div class="logo-pnh">
+                <a target="_blank" href="https://www.noord-holland.nl"> <img id="pnh" src="/media/PNH_logo.webp" alt=""></a>
+            </div>
             <p class="copy-text"> &#169; 2022</p>
         </div>
     </footer>
